# internal/router.go
@@ -3,6 +3,7 @@ package internal
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/rizalarfiyan/be-tilik-jalan/internal/handler"
+	"github.com/rizalarfiyan/be-tilik-jalan/middleware"
 )
 
 type Router interface {
@@ -12,11 +13,13 @@ type Router interface {
 
 type router struct {
 	app *fiber.App
+	mid middleware.Middleware
 }
 
-func NewRouter(app *fiber.App) Router {
+func NewRouter(app *fiber.App, mid middleware.Middleware) Router {
 	return &router{
 		app: app,
+		mid: mid,
 	}
 }
 
@@ -25,6 +28,7 @@ func (r *router) HomeRoute(handler handler.HomeHandler) {
 }
 
 func (r *router) AuthRoute(handler handler.AuthHandler) {
+	r.app.Get("/auth/me", r.mid.Auth(), handler.Me)
 	r.app.Get("/auth/google", handler.Google)
 	r.app.Get("/auth/google/callback", handler.GoogleCallback)
 }
